--- a/dez/w1/Dockerfile
+++ b/dez/w1/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:3.9.1
 
-RUN apt-get install wget
-RUN pip install pandas sqlalchemy psycopg2
+RUN pip install pandas sqlalchemy psycopg2 pyarrow
 
 WORKDIR /app
-COPY pipeline.py pipeline.py 
+COPY . . 
 
 ENTRYPOINT [ "python", "pipeline.py" ]
